--- a/.github/workflows/build&push.yml
+++ b/.github/workflows/build&push.yml
@@ -30,10 +30,8 @@ jobs:
     - name: Build, tag, and push image to Amazon ECR
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: github-sample
+        ECR_REPOSITORY: ror-demo
         IMAGE_TAG: sample_image
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-
-Let’s understand our workflow first
