--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -47,7 +47,7 @@ jobs:
         aws-region: us-east-1
       uses: appleboy/ssh-action@master
       with:
-        host: ${{secrets.SERVER_PUBLIC_IP}}
+        host: 3.89.73.48
         username: ubuntu
         key: ${{secrets.EC2_INSTANCE_SSH_KEY}}
         script: |
