--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -54,8 +54,8 @@ jobs:
           # sudo apt-get update
           # sudo apt-get install -y docker.io
           # sudo service docker start
-          docker stop webapp || true
-          docker rm webapp || true
+          # docker stop webapp || true
+          # docker rm webapp || true
           docker pull 048273253858.dkr.ecr.us-east-1.amazonaws.com/ror-demo:sample_image
           docker run -d --name ror-container -p 3000:3000 048273253858.dkr.ecr.us-east-1.amazonaws.com/ror-demo:sample_image
         
