--- a/drkiq/Gemfile
+++ b/drkiq/Gemfile
@@ -3,7 +3,7 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
 ruby "3.1.2"
 
-gem 'unicorn', '~> 6.1.0'
+# gem 'unicorn', '~> 6.1.0'
 gem 'pg', '~> 1.3.5'
 gem 'sidekiq', '~> 6.4.2'
 gem 'redis-rails', '~> 5.0.2'
