--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -54,7 +54,7 @@ jobs:
           # sudo apt-get update
           # sudo apt-get install -y docker.io
           # sudo service docker start
-          #sudo chmod 666 /var/run/docker.sock
+          sudo chmod 666 /var/run/docker.sock
           docker stop ror-container || true
           docker rm ror-container || true
           docker pull 048273253858.dkr.ecr.us-east-1.amazonaws.com/ror-demo:sample_image
