--- a/.github/workflows/new.yml
+++ b/.github/workflows/new.yml
@@ -59,6 +59,7 @@ jobs:
           # sudo apt-get install -y docker.io
           # sudo service docker start
           sudo chmod 666 /var/run/docker.sock
+          # aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 048273253858.dkr.ecr.us-east-1.amazonaws.com/ror-demo
           docker stop ror-container || true
           docker rm ror-container || true
           docker pull 048273253858.dkr.ecr.us-east-1.amazonaws.com/ror-demo:sample_image
